penambahan gambar pada PorducController
